working through examples

--- a/examples/dissolve/docs-dissolve.ipynb
+++ b/examples/dissolve/docs-dissolve.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "North America  MULTIPOLYGON (((-155.22217 19.23972, -155.5421..."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "North America  MULTIPOLYGON (((-155.22217 19.23972, -155.5421...   573042112"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,6 +244,113 @@
     "continents.plot(column = 'pop_est', scheme='quantiles', cmap='YlOrRd');\n",
     "\n",
     "continents.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can even define a dict `aggfunc` that specifies particular aggregation functions for different columns on the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>pop_est</th>\n",
+       "      <th>gdp_md_est</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>continent</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Africa</th>\n",
+       "      <td>MULTIPOLYGON (((-11.43878 6.78592, -11.70819 6...</td>\n",
+       "      <td>1219176238</td>\n",
+       "      <td>1.181430e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Antarctica</th>\n",
+       "      <td>MULTIPOLYGON (((-61.13898 -79.98137, -60.61012...</td>\n",
+       "      <td>4050</td>\n",
+       "      <td>8.100000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Asia</th>\n",
+       "      <td>MULTIPOLYGON (((48.67923 14.00320, 48.23895 13...</td>\n",
+       "      <td>4389144868</td>\n",
+       "      <td>1.179460e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Europe</th>\n",
+       "      <td>MULTIPOLYGON (((-53.55484 2.33490, -53.77852 2...</td>\n",
+       "      <td>746398461</td>\n",
+       "      <td>6.483302e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>North America</th>\n",
+       "      <td>MULTIPOLYGON (((-155.22217 19.23972, -155.5421...</td>\n",
+       "      <td>573042112</td>\n",
+       "      <td>1.305841e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                        geometry     pop_est  \\\n",
+       "continent                                                                      \n",
+       "Africa         MULTIPOLYGON (((-11.43878 6.78592, -11.70819 6...  1219176238   \n",
+       "Antarctica     MULTIPOLYGON (((-61.13898 -79.98137, -60.61012...        4050   \n",
+       "Asia           MULTIPOLYGON (((48.67923 14.00320, 48.23895 13...  4389144868   \n",
+       "Europe         MULTIPOLYGON (((-53.55484 2.33490, -53.77852 2...   746398461   \n",
+       "North America  MULTIPOLYGON (((-155.22217 19.23972, -155.5421...   573042112   \n",
+       "\n",
+       "                 gdp_md_est  \n",
+       "continent                    \n",
+       "Africa         1.181430e+05  \n",
+       "Antarctica     8.100000e+02  \n",
+       "Asia           1.179460e+06  \n",
+       "Europe         6.483302e+05  \n",
+       "North America  1.305841e+06  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "world = geopandas.read_file(geopandas.datasets.get_path('naturalearth_lowres'))\n",
+    "world.dissolve(by='continent', aggfunc={'pop_est': 'sum', 'gdp_md_est': 'mean'}).head()"
    ]
   }
  ],
