tweaks for write up

--- a/examples/sjoin-task.ipynb
+++ b/examples/sjoin-task.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -112,38 +112,204 @@
        "      <td>18560000.0</td>\n",
        "      <td>MULTIPOLYGON (((-122.84000 49.00000, -120.0000...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>7111024</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Serbia</td>\n",
+       "      <td>SRB</td>\n",
+       "      <td>101800.0</td>\n",
+       "      <td>POLYGON ((18.82982 45.90887, 18.82984 45.90888...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>642550</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Montenegro</td>\n",
+       "      <td>MNE</td>\n",
+       "      <td>10610.0</td>\n",
+       "      <td>POLYGON ((20.07070 42.58863, 19.80161 42.50009...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>1895250</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Kosovo</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>18490.0</td>\n",
+       "      <td>POLYGON ((20.59025 41.85541, 20.52295 42.21787...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>1218208</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>Trinidad and Tobago</td>\n",
+       "      <td>TTO</td>\n",
+       "      <td>43570.0</td>\n",
+       "      <td>POLYGON ((-61.68000 10.76000, -61.10500 10.890...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>13026129</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>S. Sudan</td>\n",
+       "      <td>SSD</td>\n",
+       "      <td>20880.0</td>\n",
+       "      <td>POLYGON ((30.83385 3.50917, 29.95350 4.17370, ...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>177 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     pop_est      continent                      name iso_a3  gdp_md_est  \\\n",
-       "0     920938        Oceania                      Fiji    FJI      8374.0   \n",
-       "1   53950935         Africa                  Tanzania    TZA    150600.0   \n",
-       "2     603253         Africa                 W. Sahara    ESH       906.5   \n",
-       "3   35623680  North America                    Canada    CAN   1674000.0   \n",
-       "4  326625791  North America  United States of America    USA  18560000.0   \n",
+       "       pop_est      continent                      name iso_a3  gdp_md_est  \\\n",
+       "0       920938        Oceania                      Fiji    FJI      8374.0   \n",
+       "1     53950935         Africa                  Tanzania    TZA    150600.0   \n",
+       "2       603253         Africa                 W. Sahara    ESH       906.5   \n",
+       "3     35623680  North America                    Canada    CAN   1674000.0   \n",
+       "4    326625791  North America  United States of America    USA  18560000.0   \n",
+       "..         ...            ...                       ...    ...         ...   \n",
+       "172    7111024         Europe                    Serbia    SRB    101800.0   \n",
+       "173     642550         Europe                Montenegro    MNE     10610.0   \n",
+       "174    1895250         Europe                    Kosovo    -99     18490.0   \n",
+       "175    1218208  North America       Trinidad and Tobago    TTO     43570.0   \n",
+       "176   13026129         Africa                  S. Sudan    SSD     20880.0   \n",
        "\n",
-       "                                            geometry  \n",
-       "0  MULTIPOLYGON (((180.00000 -16.06713, 180.00000...  \n",
-       "1  POLYGON ((33.90371 -0.95000, 34.07262 -1.05982...  \n",
-       "2  POLYGON ((-8.66559 27.65643, -8.66512 27.58948...  \n",
-       "3  MULTIPOLYGON (((-122.84000 49.00000, -122.9742...  \n",
-       "4  MULTIPOLYGON (((-122.84000 49.00000, -120.0000...  "
+       "                                              geometry  \n",
+       "0    MULTIPOLYGON (((180.00000 -16.06713, 180.00000...  \n",
+       "1    POLYGON ((33.90371 -0.95000, 34.07262 -1.05982...  \n",
+       "2    POLYGON ((-8.66559 27.65643, -8.66512 27.58948...  \n",
+       "3    MULTIPOLYGON (((-122.84000 49.00000, -122.9742...  \n",
+       "4    MULTIPOLYGON (((-122.84000 49.00000, -120.0000...  \n",
+       "..                                                 ...  \n",
+       "172  POLYGON ((18.82982 45.90887, 18.82984 45.90888...  \n",
+       "173  POLYGON ((20.07070 42.58863, 19.80161 42.50009...  \n",
+       "174  POLYGON ((20.59025 41.85541, 20.52295 42.21787...  \n",
+       "175  POLYGON ((-61.68000 10.76000, -61.10500 10.890...  \n",
+       "176  POLYGON ((30.83385 3.50917, 29.95350 4.17370, ...  \n",
+       "\n",
+       "[177 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "world.head()"
+    "world"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>pop_est</th>\n",
+       "      <th>gdp_md_est</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>continent</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Africa</th>\n",
+       "      <td>MULTIPOLYGON (((-11.43878 6.78592, -11.70819 6...</td>\n",
+       "      <td>1219176238</td>\n",
+       "      <td>1.181430e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Antarctica</th>\n",
+       "      <td>MULTIPOLYGON (((-61.13898 -79.98137, -60.61012...</td>\n",
+       "      <td>4050</td>\n",
+       "      <td>8.100000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Asia</th>\n",
+       "      <td>MULTIPOLYGON (((48.67923 14.00320, 48.23895 13...</td>\n",
+       "      <td>4389144868</td>\n",
+       "      <td>1.179460e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Europe</th>\n",
+       "      <td>MULTIPOLYGON (((-53.55484 2.33490, -53.77852 2...</td>\n",
+       "      <td>746398461</td>\n",
+       "      <td>6.483302e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>North America</th>\n",
+       "      <td>MULTIPOLYGON (((-155.22217 19.23972, -155.5421...</td>\n",
+       "      <td>573042112</td>\n",
+       "      <td>1.305841e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                        geometry     pop_est  \\\n",
+       "continent                                                                      \n",
+       "Africa         MULTIPOLYGON (((-11.43878 6.78592, -11.70819 6...  1219176238   \n",
+       "Antarctica     MULTIPOLYGON (((-61.13898 -79.98137, -60.61012...        4050   \n",
+       "Asia           MULTIPOLYGON (((48.67923 14.00320, 48.23895 13...  4389144868   \n",
+       "Europe         MULTIPOLYGON (((-53.55484 2.33490, -53.77852 2...   746398461   \n",
+       "North America  MULTIPOLYGON (((-155.22217 19.23972, -155.5421...   573042112   \n",
+       "\n",
+       "                 gdp_md_est  \n",
+       "continent                    \n",
+       "Africa         1.181430e+05  \n",
+       "Antarctica     8.100000e+02  \n",
+       "Asia           1.179460e+06  \n",
+       "Europe         6.483302e+05  \n",
+       "North America  1.305841e+06  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -197,31 +363,70 @@
        "      <td>Palikir</td>\n",
        "      <td>POINT (158.14997 6.91664)</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>Cairo</td>\n",
+       "      <td>POINT (31.24802 30.05191)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>POINT (139.74946 35.68696)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>POINT (2.33139 48.86864)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>POINT (-70.66899 -33.44807)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>POINT (103.85387 1.29498)</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>202 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           name                   geometry\n",
-       "0  Vatican City  POINT (12.45339 41.90328)\n",
-       "1    San Marino  POINT (12.44177 43.93610)\n",
-       "2         Vaduz   POINT (9.51667 47.13372)\n",
-       "3    Luxembourg   POINT (6.13000 49.61166)\n",
-       "4       Palikir  POINT (158.14997 6.91664)"
+       "             name                     geometry\n",
+       "0    Vatican City    POINT (12.45339 41.90328)\n",
+       "1      San Marino    POINT (12.44177 43.93610)\n",
+       "2           Vaduz     POINT (9.51667 47.13372)\n",
+       "3      Luxembourg     POINT (6.13000 49.61166)\n",
+       "4         Palikir    POINT (158.14997 6.91664)\n",
+       "..            ...                          ...\n",
+       "197         Cairo    POINT (31.24802 30.05191)\n",
+       "198         Tokyo   POINT (139.74946 35.68696)\n",
+       "199         Paris     POINT (2.33139 48.86864)\n",
+       "200      Santiago  POINT (-70.66899 -33.44807)\n",
+       "201     Singapore    POINT (103.85387 1.29498)\n",
+       "\n",
+       "[202 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities.head()"
+    "cities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -311,34 +516,115 @@
        "      <td>AUT</td>\n",
        "      <td>416600.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>Jakarta</td>\n",
+       "      <td>POINT (106.82749 -6.17247)</td>\n",
+       "      <td>8</td>\n",
+       "      <td>260580739</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>IDN</td>\n",
+       "      <td>3028000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>Bogota</td>\n",
+       "      <td>POINT (-74.08529 4.59837)</td>\n",
+       "      <td>32</td>\n",
+       "      <td>47698524</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>COL</td>\n",
+       "      <td>688000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>Cairo</td>\n",
+       "      <td>POINT (31.24802 30.05191)</td>\n",
+       "      <td>163</td>\n",
+       "      <td>97041072</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>EGY</td>\n",
+       "      <td>1105000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>POINT (139.74946 35.68696)</td>\n",
+       "      <td>155</td>\n",
+       "      <td>126451398</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>JPN</td>\n",
+       "      <td>4932000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>Santiago</td>\n",
+       "      <td>POINT (-70.66899 -33.44807)</td>\n",
+       "      <td>10</td>\n",
+       "      <td>17789267</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>Chile</td>\n",
+       "      <td>CHL</td>\n",
+       "      <td>436100.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>172 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        name_left                   geometry  index_right   pop_est continent  \\\n",
-       "0    Vatican City  POINT (12.45339 41.90328)          141  62137802    Europe   \n",
-       "1      San Marino  POINT (12.44177 43.93610)          141  62137802    Europe   \n",
-       "192          Rome  POINT (12.48131 41.89790)          141  62137802    Europe   \n",
-       "2           Vaduz   POINT (9.51667 47.13372)          114   8754413    Europe   \n",
-       "184        Vienna  POINT (16.36469 48.20196)          114   8754413    Europe   \n",
+       "        name_left                     geometry  index_right    pop_est  \\\n",
+       "0    Vatican City    POINT (12.45339 41.90328)          141   62137802   \n",
+       "1      San Marino    POINT (12.44177 43.93610)          141   62137802   \n",
+       "192          Rome    POINT (12.48131 41.89790)          141   62137802   \n",
+       "2           Vaduz     POINT (9.51667 47.13372)          114    8754413   \n",
+       "184        Vienna    POINT (16.36469 48.20196)          114    8754413   \n",
+       "..            ...                          ...          ...        ...   \n",
+       "195       Jakarta   POINT (106.82749 -6.17247)            8  260580739   \n",
+       "196        Bogota    POINT (-74.08529 4.59837)           32   47698524   \n",
+       "197         Cairo    POINT (31.24802 30.05191)          163   97041072   \n",
+       "198         Tokyo   POINT (139.74946 35.68696)          155  126451398   \n",
+       "200      Santiago  POINT (-70.66899 -33.44807)           10   17789267   \n",
        "\n",
-       "    name_right iso_a3  gdp_md_est  \n",
-       "0        Italy    ITA   2221000.0  \n",
-       "1        Italy    ITA   2221000.0  \n",
-       "192      Italy    ITA   2221000.0  \n",
-       "2      Austria    AUT    416600.0  \n",
-       "184    Austria    AUT    416600.0  "
+       "         continent name_right iso_a3  gdp_md_est  \n",
+       "0           Europe      Italy    ITA   2221000.0  \n",
+       "1           Europe      Italy    ITA   2221000.0  \n",
+       "192         Europe      Italy    ITA   2221000.0  \n",
+       "2           Europe    Austria    AUT    416600.0  \n",
+       "184         Europe    Austria    AUT    416600.0  \n",
+       "..             ...        ...    ...         ...  \n",
+       "195           Asia  Indonesia    IDN   3028000.0  \n",
+       "196  South America   Colombia    COL    688000.0  \n",
+       "197         Africa      Egypt    EGY   1105000.0  \n",
+       "198           Asia      Japan    JPN   4932000.0  \n",
+       "200  South America      Chile    CHL    436100.0  \n",
+       "\n",
+       "[172 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "joined = geopandas.sjoin(cities, world, how='inner', predicate='intersects')\n",
-    "joined.head()"
+    "joined"
    ]
   },
   {
