--- a/convert_shp.ipynb
+++ b/convert_shp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "4  POLYGON ((-75.76659 39.37756, -75.76630 39.373...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,25 +183,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/f3/5cflrcbn48qftqjwwxbn53p00000gn/T/ipykernel_55987/3608394060.py:1: UserWarning: this is an initial implementation of Parquet/Feather file support and associated metadata.  This is tracking version 0.1.0 of the metadata specification at https://github.com/geopandas/geo-arrow-spec\n",
+      "/var/folders/f3/5cflrcbn48qftqjwwxbn53p00000gn/T/ipykernel_60587/3968435084.py:1: UserWarning: this is an initial implementation of Parquet/Feather file support and associated metadata.  This is tracking version 0.1.0 of the metadata specification at https://github.com/geopandas/geo-arrow-spec\n",
       "\n",
       "This metadata specification does not yet make stability promises.  We do not yet recommend using this in a production setting unless you are able to rewrite your Parquet/Feather files.\n",
       "\n",
       "To further ignore this warning, you can do: \n",
       "import warnings; warnings.filterwarnings('ignore', message='.*initial implementation of Parquet.*')\n",
-      "  gdf.to_parquet('examples/merge/data/tl_2021_us_state.geoparquet')\n"
+      "  gdf.to_parquet('examples/merge/data/tl_2021_us_state.parquet')\n"
      ]
     }
    ],
    "source": [
     "gdf.to_parquet('examples/merge/data/tl_2021_us_state.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf.to_csv('examples/merge/data/tl_2021_us_state.csv')"
    ]
   }
  ],
